objects/Live_Agent_Country_List__c.object
<CustomObject>
    <fields>
        <fullName>Chinese_Label__c</fullName>
        <description>This is used in the Livent agent visualforce pages, that are used to override the standard pages.</description>
        <label>Chinese Label</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Code_2_Digit__c</fullName>
        <description>This is used in the Livent agent visualforce pages, that are used to override the standard pages.</description>
        <label>Country Code 2 Digit</label>
        <length>2</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country_Code_3_Digit__c</fullName>
        <description>This is used in the Livent agent visualforce pages, that are used to override the standard pages.</description>
        <label>Country Code 3 Digit</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>English__c</fullName>
        <description>This is used in the Livent agent visualforce pages, that are used to override the standard pages.</description>
        <label>English</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>German__c</fullName>
        <description>This is used in the Livent agent visualforce pages, that are used to override the standard pages.</description>
        <label>German</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Japanese__c</fullName>
        <description>This is used in the Livent agent visualforce pages, that are used to override the standard pages.</description>
        <label>Japanese</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REGION_CODE__c</fullName>
        <description>0002	Americas
0401	Europe-Mideast-Africa
0442	Asia-Pacific</description>
        <inlineHelpText>0002	Americas
0401	Europe-Mideast-Africa
0442	Asia-Pacific</inlineHelpText>
        <label>REGION CODE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0002</fullName>
                </value>
                <value>
                    <fullName>0401</fullName>
                </value>
                <value>
                    <fullName>0442</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Live Agent Country List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Chinese_Label__c</columns>
        <columns>Country_Code_2_Digit__c</columns>
        <columns>Country_Code_3_Digit__c</columns>
        <columns>English__c</columns>
        <columns>German__c</columns>
        <columns>Japanese__c</columns>
        <columns>REGION_CODE__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Live Agent Country List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Live Agent Country Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>